--- a/WordPress/Resources/da.lproj/Localizable.strings
+++ b/WordPress/Resources/da.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-04-09 23:21:35+0000 */
+/* Translation-Revision-Date: 2021-08-01 11:15:22+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: da_DK */
@@ -484,7 +484,7 @@
 "Add a shortcode…" = "Add a shortcode…";
 
 /* No Tags View Button Label */
-"Add a site" = "Add a site";
+"Add a site" = "Tilføj et websted";
 
 /* No Topics View Button Label */
 "Add a topic" = "Add a topic";
@@ -820,13 +820,13 @@
 "Are you sure you want to trash this page?" = "Are you sure you want to trash this page?";
 
 /* Message of the trash confirmation alert. */
-"Are you sure you want to trash this post?" = "Are you sure you want to trash this post?";
+"Are you sure you want to trash this post?" = "Er du sikker på, du vil slette dette indlæg?";
 
 /* Title of message shown when user taps update. */
 "Are you sure you want to update?" = "Are you sure you want to update?";
 
 /* An example tag used in the login prologue screens. */
-"Art" = "Art";
+"Art" = "Kunst";
 
 /* Message shown to users who have an old publicize connection to a facebook profile. */
 "As of August 1, 2018, Facebook no longer allows direct sharing of posts to Facebook Profiles. Connections to Facebook Pages remain unchanged." = "As of August 1, 2018, Facebook no longer allows direct sharing of posts to Facebook Profiles. Connections to Facebook Pages remain unchanged.";
@@ -1001,7 +1001,7 @@
 "Block settings" = "Block settings";
 
 /* The title of a button that triggers blocking a site from the user's reader. */
-"Block this site" = "Block this site";
+"Block this site" = "Bloker dette websted";
 
 /* Notice title when blocking a site succeeds. */
 "Blocked site" = "Bloker websted";
@@ -1181,7 +1181,7 @@
 "Cancel sharing" = "Cancel sharing";
 
 /* The action was canceled */
-"Canceled" = "Canceled";
+"Canceled" = "Annulleret";
 
 /* A short message that informs the user the share extension is being canceled. */
 "Canceling..." = "Canceling...";
@@ -1815,11 +1815,11 @@
 /* Button for selecting the current page template.
    Button title, encourages users to create their first page on their blog.
    Title for button to make a page with the contents of the selected layout */
-"Create Page" = "Create Page";
+"Create Page" = "Opret side";
 
 /* Button title, encourages users to create post on their blog.
    Label for action to create a new post. */
-"Create Post" = "Create Post";
+"Create Post" = "Opret indlæg";
 
 /* Button to progress to the next step
    Site creation. Step 1. Screen title */
@@ -2387,13 +2387,13 @@
 "Edit cover media" = "Edit cover media";
 
 /* No comment provided by engineer. */
-"Edit file" = "Edit file";
+"Edit file" = "Rediger fil";
 
 /* No comment provided by engineer. */
 "Edit focal point" = "Edit focal point";
 
 /* No comment provided by engineer. */
-"Edit media" = "Edit media";
+"Edit media" = "Rediger medie";
 
 /* Explanation for the option to enable the block editor */
 "Edit new posts and pages with the block editor." = "Edit new posts and pages with the block editor.";
@@ -3009,7 +3009,7 @@
 "Generating Preview" = "Generating Preview";
 
 /* View title for initial auth views. */
-"Get Started" = "Get Started";
+"Get Started" = "Kom i gang!";
 
 /* The button title for a secondary call-to-action button. When the user wants to try sending a magic link instead of entering a password. */
 "Get a login link by email" = "Get a login link by email";
@@ -3408,7 +3408,7 @@
 "Installing %@…" = "Installing %@…";
 
 /* The Jetpack view title used while the is installing */
-"Installing Jetpack" = "Installing Jetpack";
+"Installing Jetpack" = "Installer Jetpack";
 
 /* The Jetpack view message used while the state is installing */
 "Installing Jetpack on your site. This can take up to a few minutes to complete." = "Installing Jetpack on your site. This can take up to a few minutes to complete.";
@@ -3733,7 +3733,7 @@
 "Loading Scan History..." = "Loading Scan History...";
 
 /* Text displayed while loading the scan section for a site */
-"Loading Scan..." = "Loading Scan...";
+"Loading Scan..." = "Indlæser scan...";
 
 /* Shown while the app waits for the domain suggestions web service to return during the site creation process. */
 "Loading domains" = "Loading domains";
@@ -4222,7 +4222,7 @@
 "No" = "Nej";
 
 /* Empty state message (People Management). %@ can be 'users' or 'followers' */
-"No %@ yet" = "No %@ yet";
+"No %@ yet" = "Ingen %@ endnu";
 
 /* Title of an error message. There were no third-party service accounts found to setup sharing. */
 "No Accounts Found" = "No Accounts Found";
@@ -4282,7 +4282,7 @@
 "No available sites" = "No available sites";
 
 /* No comment provided by engineer. */
-"No blocks found" = "No blocks found";
+"No blocks found" = "Ingen blokke fundet.";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "No comments";
@@ -4372,7 +4372,7 @@
 "No new topics to follow" = "No new topics to follow";
 
 /* Displayed in the Notifications Tab as a title, when there are no notifications */
-"No notifications yet" = "No notifications yet";
+"No notifications yet" = "Ingen notifikationer endnu";
 
 /* Displayed when the user is searching the pages list and there are no matching pages
    Text displayed when there's no matching with the text search */
@@ -4439,7 +4439,7 @@
 "North" = "Nord";
 
 /* Error title for alert, shown to a user who is trying to share to Facebook but does not have any available Facebook Pages. */
-"Not Connected" = "Not Connected";
+"Not Connected" = "Ikke forbundet";
 
 /* Nicer dialog answer for \"No\". */
 "Not Now" = "Ikke nu";
@@ -4818,7 +4818,7 @@
 "Photo Library" = "Photo Library";
 
 /* Tab bar title for the Photos tab in Media Picker */
-"Photos" = "Photos";
+"Photos" = "Foto";
 
 /* Subtitle for placeholder in Free Photos. The company name 'Pexels' should always be written as it is. */
 "Photos provided by Pexels" = "Photos provided by Pexels";
@@ -6357,7 +6357,7 @@
 "Sort By" = "Sort By";
 
 /* No comment provided by engineer. */
-"Sorting and filtering" = "Sorting and filtering";
+"Sorting and filtering" = "Sortering og filtrering";
 
 /* Opens the Github Repository Web */
 "Source Code" = "Source Code";
@@ -6709,7 +6709,7 @@
 "The WordPress for Android App Gets a Big Facelift" = "The WordPress for Android App Gets a Big Facelift";
 
 /* Example post title used in the login prologue screens. This is a post about football fans. */
-"The World's Best Fans" = "The World's Best Fans";
+"The World's Best Fans" = "Verdens bedste fans";
 
 /* No comment provided by engineer. */
 "The app can't recognize the server response. Please, check the configuration of your site." = "The app can't recognize the server response. Please, check the configuration of your site.";
@@ -7680,7 +7680,7 @@
 "Version" = "Version";
 
 /* Description for the version label in the What's new page. */
-"Version " = "Version ";
+"Version " = "Version";
 
 /* Version of a plugin to install
    Version of an installed plugin */
@@ -8426,7 +8426,7 @@
 "You haven't published any posts yet. Once you start publishing, your latest post's summary will appear here." = "You haven't published any posts yet. Once you start publishing, your latest post's summary will appear here.";
 
 /* Title for a view milestone push notification */
-"You hit a milestone 🚀" = "";
+"You hit a milestone 🚀" = "Du har ramt en milepæl 🚀";
 
 /* Text rendered at the bottom of the Allowlisted IP Addresses editor, should match Calypso. */
 "You may allowlist an IP address or series of addresses preventing them from ever being blocked by Jetpack. IPv4 and IPv6 are acceptable. To specify a range, enter the low value and high value separated by a dash. Example: 12.12.12.1-12.12.12.100." = "You may allowlist an IP address or series of addresses preventing them from ever being blocked by Jetpack. IPv4 and IPv6 are acceptable. To specify a range, enter the low value and high value separated by a dash. Example: 12.12.12.1-12.12.12.100.";
